--- a/README
+++ b/README
@@ -1,10 +1,9 @@
 Zadanie polegające na stworzeniu prostego odtwarzacza.
 
-Elementy z json.server wyszukiwane są po title oraz description. Wyszukane elementy wyświetlane są w liście
-z przyciskiem "odtwórz film".
+Elementy z json.server wyszukiwane są po title oraz description. Wyszukane elementy wyświetlane są w liście z przyciskiem "odtwórz film".
 Po kliknięciu "odtwórz film" - film jest uruchamiany. Dodane są kontrolki (play, pause oraz spowolnienie pod osobnym przyciskiem).
 
-Dodatkowe przyciski "jedną klatkę dalej/wstecz" które na zatrzymanym video przenoszą o jedną
+Dodatkowe przyciski "jedna klatka dalej/wstecz" które na zatrzymanym video przenoszą o jedną
 klatkę dalej/wstecz  - zakładając że film ma 24 klatki na sekundę.
 
 Technologie:
