--- a/README
+++ b/README
@@ -6,5 +6,7 @@ Po kliknięciu "odtwórz film" - film jest uruchamiany. Dodane są kontrolki (pl
 Dodatkowe przyciski "jedna klatka dalej/wstecz" które na zatrzymanym video przenoszą o jedną
 klatkę dalej/wstecz  - zakładając że film ma 24 klatki na sekundę.
 
+Link do repozytorium:
+
 Technologie:
 HTML, CSS, JavaScript, jquery
